fix : visibilité des éléments saisies

--- a/src/assets/_ui.scss
+++ b/src/assets/_ui.scss
@@ -115,6 +115,7 @@ hr {
   --color-h3: var(--color-h1);
   --color-h4: var(--color-h1);
   --color-muted: #{$color-muted};
+  --color-input-select: #818387;
   --color-input-border: #{$color-input-border};
   --color-input: #{$color-input};
   --color-switch-background: #{$color-switch-background};
