--- a/src/assets/ui/_select.scss
+++ b/src/assets/ui/_select.scss
@@ -55,7 +55,7 @@
         color: var(--color-input-border);
       }
 
-      color: var(--color-input-border);
+      color: var(--color-input-select);
     }
 
   }
